--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_PASSWORD=merchant123
 DB_NAME=AmbrsariyaMall
 DB_PORT=5432
 DB_SSL=false
-DATABASE_URL = postgresql://ambarsariya_mall_gock_user:SOOj1ACHKWyPHtrBDiHChIX9d8Zmi3Ms@dpg-ct0mijbtq21c73egbou0-a.singapore-postgres.render.com/ambarsariya_mall_gock
+DATABASE_URL = postgresql://amall:oqJtfJDqSecC87vnaP3AHOiwkDGYZccJ@dpg-ct0rcqpu0jms73c8s09g-a.singapore-postgres.render.com/ambarsariya_mall_9r4y
