--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ DB_PASSWORD=merchant123
 DB_NAME=AmbrsariyaMall
 DB_PORT=5432
 DB_SSL=false
+PORT=4000
 DATABASE_URL = postgresql://amall:oqJtfJDqSecC87vnaP3AHOiwkDGYZccJ@dpg-ct0rcqpu0jms73c8s09g-a.singapore-postgres.render.com/ambarsariya_mall_9r4y
