--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
-    "pool": "^0.4.1"
+    "pool": "^0.4.1",
+    "xlsx": "^0.18.5"
   }
 }
