--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@google-cloud/storage": "^7.15.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.46.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "googleapis": "^144.0.0",
+    "ioredis": "^5.6.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.16",
