--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "pool": "^0.4.1",
+    "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
     "xlsx": "^0.18.5"
   }
