--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
+    "twilio": "^5.12.0",
     "xlsx": "^0.18.5"
   }
 }
